<resources>
    <string name="app_name">TOF_BLE_Graph</string>

    <!-- Strings for Text Views -->
    <string name="DataLabel">Data:</string>
    <string name="AvgLabel">Avg:</string>
    <string name="sourceLabel">Source:</string>
    <string name="defaultData">Data from device goes here.</string>
    <string name="countLabel"><u>Number of Peaks</u></string>
    <string name="ratioLabel"><u>Ratio: Last Peak to First</u></string>
    <string name="ampThresholdLabel"><u>Amplitude Threshold</u></string>
    <string name="slopeThresholdLabel"><u>Slope Threshold</u></string>

    <!-- Strings for Buttons -->
    <string name="pause">Pause/Continue</string>
    <string name="resetGraphButton">Reset Graph</string>
    <string name="sleepToggle">Sleep</string>
    <string name="logToggle">Log Data</string>
    <string name="plus">+</string>
    <string name="minus">-</string>


    <!-- Content Descriptions -->
    <string name="ble_button1">Ble Menu Open</string>
    <string name="ble_button2">Ble Connect</string>
    <string name="ble_button3">Ble Disconnect</string>
    <string name="pauseBtnDesc">Pause/Resume Data Logging</string>
    <string name="spinnerDesc">Discovered BLE Devices</string>
    <string name="AvgInit">Avg:</string>

</resources>